add documentation to the ancient codex

--- a/src/main/resources/assets/aetherworks/lang/en_us.lang
+++ b/src/main/resources/assets/aetherworks/lang/en_us.lang
@@ -129,3 +129,84 @@ aetherworks.metal_former=Metal Former
 aetherworks.anvil=Aetherium Anvil
 
 aw.enchantment.aetherid=Aetheric %s
+
+embers.research.aetherworks=The Aetherium Forge
+embers.research.page.aetherium_ore=Aetherium Ore
+embers.research.page.aetherium_ore.title=Aetherium Ore
+embers.research.page.aetherium_ore.desc=The first thing you will need in order to begin playing with the mod is Aetherium Ore itself. Formed high in the mountains it can be a challenge to find. Thankfully it emits light to help find it. Upon mining it with a diamond pickaxe it will drop Aetherium Shards.
+embers.research.page.aether_collector=Aetherium Collector
+embers.research.page.aether_collector.title=Aetherium Collector
+embers.research.page.aether_collector.desc=The Aetherium Collector is a multiblock structure that can be used to collect Aetherium Gas from the atmosphere. It is a very simple structure to build and can be used to collect Aetherium Gas for use in the Aetherium Forge.
+embers.research.page.purifying_aetherium=Purifying Aetherium
+embers.research.page.purifying_aetherium.title=Purifying Aetherium
+embers.research.page.purifying_aetherium.desc=In order to get usable Aetherium Gas from the Impure Aetherium you've been collecting you'll need a Mixer Centrifuge. Simply mix Impure Aetherium with some Molten Electrum to get your pure Aetherium which is usable! Aetherium can be immediately used to create more Aetherium Shards via the use of a Stamper.
+embers.research.page.forge=The Forge
+embers.research.page.forge.title=The Forge
+embers.research.page.forge.desc=The forge is a multiblock structure that you build up using peripherals that affect the way the structure works. To work with Aetherium a simple crafting table isn't enough. A forge structure is required. The forge is constructed by placing a 3x3 of Dawnstone blocks and hitting the middle one with your Tinker's hammer. The central component of the forge is the Aetherium Forge Core which is placed on top of the middle forge block. It requires embers which can be
+embers.research.page.forge_1.title=The Forge
+embers.research.page.forge_1.desc=inserted from the top of the block. You know you've done it correctly as the forge will start glowing with red runes. The forge operates with heat - in order to work it needs to store a specific amount of heat. If too little is stored it won't be usable. If too much is stored the forge will blow up. In order to control the heat you may want to know it's current amount instead of guessing. The Heat Gauge is a block that can be placed on any side of
+embers.research.page.forge_2.title=The Forge
+embers.research.page.forge_2.desc=the Aetherium Forge Core and will read the current heat of the forge. At it's core the forge is used to process aetherium so you need a way of inputting it into the forge. Placing any fluid container by the forge blocks(not the core!) on the same y level will allow the forge to extract aetherium from that container.
+embers.research.page.heater=Generating Heater
+embers.research.page.heater.title=Generating Heat
+embers.research.page.heater.desc=As already stated the forge needs heat. The way to build up heat is through the use of Aetherium Forge Heaters. They will convert external (pumped in) water into steam using a heat source underneath (lava) and heat up the forge. They can be attached to any horizontal (north, west, south or east) side of the forge blocks themselves (not the core!). They need a redstone signal to start producing heat and will stop as soon as the signal is removed.
+embers.research.page.heater_1.title=Generating Heat
+embers.research.page.heater_1.desc=They also require ember to work. Multiple of this block can be attached to the forge for extra heating.
+embers.research.page.cooler=Reducing Heat
+embers.research.page.cooler.title=Reducing Heat
+embers.research.page.cooler.desc=The heat will drop on it's own if none is produced but a finer control is needed in order to operate the forge properly. There are 2 methods of removing the heat from the forge. The Aetherium Forge Cooler is one such block. This block can be attached to any horizontal (north, west, south or east) side of the forge blocks themselves(not the core!). It needs ember as well as a cold source underneath(ice).
+embers.research.page.cooler_1.title=Reducing Heat
+embers.research.page.cooler_1.desc=It also needs to be supplied with water. If activated with a redstone signal the cooler will consume the coolant block and instantly drop the temperature of the forge.
+embers.research.page.vent=Venting Heat
+embers.research.page.vent.title=Venting Heat
+embers.research.page.vent.desc=A more passive way of venting out heat is the Aetherium Forge Heat Vent. This block can be attached to any horizontal (north, west, south or east) side of the forge blocks themselves (not the core!). It will passively vent out the steam from the forge dropping the heat each tick. Multiple of this block can be attached to the forge for extra cooling.
+embers.research.page.metal_former=Metal Former
+embers.research.page.metal_former.title=Metal Former
+embers.research.page.metal_former.desc=In order to actually do anything with the forge you will need 2 blocks. Aetherium Forge Metal Former is one such block. It is able to imbue materials with Aetherium to convert them into their aetherium counterparts. It is placed on top of the forge blocks (not the core!). To place the material into this block just right-click it with the material in your hand.
+embers.research.page.anvil=Aetherium Anvil
+embers.research.page.anvil.title=Aetherium Anvil
+embers.research.page.anvil.desc=The second crafting block is the Aetherium Forge Anvil. It too is placed on the top of the forge blocks (not the core!) and allows you to process items. To insert an item into this block just right-click it with the item in hand. If the recipe and the temperature are correct you will see a red exclamation point above the anvil. Right-click the anvil with Tinker's hammer in hand when it makes a noise and the exclamation mark turns green to work the metal.
+embers.research.page.anvil_1.title=Aetherium Anvil
+embers.research.page.anvil_1.desc=You can fail 3 times. After several clicks your item will be ready.
+embers.research.page.aetherium_tools_category=Smithing Tools
+embers.research.page.aetherium_tools=Aetherium Tools
+embers.research.page.aetherium_tools.title=Aetherium Tools
+embers.research.page.aetherium_tools.desc=Now when you know how to collect aetherium, purify it and put it to use in the forge you can start making Aetherium Tools. They are the ultimate tools that can assist you while you play in multiple ways. Any tool has an AoE effect when it breaks blocks. Shift-clicking with the tool in hand disables that effect. In order for the effect to proc you will however need some ember in your inventory (a Mantle Cartridge in your offhand will do).
+embers.research.page.aetherium_tools_1.title=Aetherium Tools
+embers.research.page.aetherium_tools_1.desc=All tools have the unique Aetheric enchantment that makes them repair themselves while exposed to moonlight. This enchantment however allows the tool to be enchanted even further via an Enchantment Table or an anvil. Different tools have different additional effects.
+embers.research.page.pickaxe_boundless_sky=Pickaxe Of The Boundless Sky
+embers.research.page.pickaxe_boundless_sky.title=Pickaxe Of The Boundless Sky
+embers.research.page.pickaxe_boundless_sky.desc=This pickaxe is able to mine veins of blocks. Right-clicking any block will make the pickaxe break it and all similar surrounding blocks in a range.
+embers.research.page.pickaxe_molten_depths=Pickaxe Of The Molten Depths
+embers.research.page.pickaxe_molten_depths.title=Pickaxe Of The Molten Depths
+embers.research.page.pickaxe_molten_depths.desc=This pickaxe has a chance to drop geode items when you mine blocks. The type of the geode is determined by the biome you are mining in. Different types have different items in them (or at least different chances to get different items). Geodes can be processed on an Aetherium Forge Anvil to obtain the contents.
+embers.research.page.axe_ancient_torrents=Axe Of The Ancient Torrents
+embers.research.page.axe_ancient_torrents.title=Axe Of The Ancient Torrents
+embers.research.page.axe_ancient_torrents.desc=Holding right-click with this axe will randomly apply bonemeal around you. It will also considerably speed up the growth of any crop. This effect has a range (radius) of 16 blocks.
+embers.research.page.axe_twisted_realm=Axe Of The Twisted Realm
+embers.research.page.axe_twisted_realm.title=Axe Of The Twisted Realm
+embers.research.page.axe_twisted_realm.desc=Right-clicking a block of wood with this axe will make it chop the farthest connected block of wood. If you aim at the base of a tree and hold right click this axe will chop down the entire tree regardless of it's size.
+embers.research.page.shovel_perfect_machines=Shovel Of The Perfect Machines
+embers.research.page.shovel_perfect_machines.title=Shovel Of The Perfect Machines
+embers.research.page.shovel_perfect_machines.desc=While holding this shovel in your hand an additional hud element will be visible at the bottom right of the screen next to the hotbar. Shift right-clicking any block will make the shovel "remember" this block. Right clicking on any block when the piston image has a cross on it will make the shovel place a 3x3 wall of "remembered" block against the face of the block you clicked on consuming the materials from your inventory in the process.
+embers.research.page.shovel_perfect_machines_1.title=Shovel Of The Perfect Machines
+embers.research.page.shovel_perfect_machines_1.desc=Holding control and scrolling the mouse wheel will change the "mode" of the shovel changing the image in the bottom right from a cross to a set of arrows. Clicking any block in this mode will make the shovel place extra blocks around the block you've clicked based on the face of the block you've clicked.
+embers.research.page.shovel_ineluctable_changes=Shovel Of The Ineluctable Changes
+embers.research.page.shovel_ineluctable_changes.title=Shovel Of The Ineluctable Changes
+embers.research.page.shovel_ineluctable_changes.desc=While holding this shovel in your hand an additional hud element will be visible at the bottom right of the screen next to the hotbar. Shift right-clicking any block will make the shovel "remember" this block. Right-clicking any block with this shovel will make it replace the targeted block and all similar blocks connected to it to the "remembered" block consuming materials from your inventory.
+embers.research.page.aetherium_crown=Aetherium Crown
+embers.research.page.aetherium_crown.title=Aetherium Crown
+embers.research.page.aetherium_crown.desc=Aetherium crown is a very powerful piece of armor. It is able to "store" one potion effect of any kind and indefinitely apply it to the player wearing the crown. In order to "store" the potion effect a Potion Gem must be crafted.
+embers.research.page.potion_gem=Potion Gem
+embers.research.page.potion_gem.title=Potion Gem
+embers.research.page.potion_gem.desc=The gem can be combined with a potion of any kind in a crafting grid to "store" that exact potion effect. The crown can then be combined with any gem to store the potion effect onto the crown. The gem can be removed from the crown at any time by either combining the crown with a different gem (you will get the gem back) or by putting a crown into the crafting grid (you will get the crown back).
+embers.research.page.crossbow_impending_doom=Crossbow Of The Impending Doom
+embers.research.page.crossbow_impending_doom.title=Crossbow Of The Impending Doom
+embers.research.page.crossbow_impending_doom.desc=A crossbow is a powerful ranged weapon. It doesn't need to be pulled like a bow. It will instead seek an arrow in your inventory and auto-load it. Loading an arrow takes 1 second. Any arrow can be loaded (normal/ tipped/ spectral/ modded). This crossbow fires an extremely powerful arrow with fixed damage. This arrow pierces all armor. These effects only work with normal or tipped arrows.
+embers.research.page.crossbow_impending_doom_1.title=Crossbow Of The Impending Doom
+embers.research.page.crossbow_impending_doom_1.desc=Additionally this crossbow receives double damage from the Power enchantment. This effect works regardless of the arrow used.
+embers.research.page.crossbow_raging_volcano=Crossbow Of The Raging Volcano
+embers.research.page.crossbow_raging_volcano.title=Crossbow Of The Raging Volcano
+embers.research.page.crossbow_raging_volcano.desc=A crossbow is a powerful ranged weapon. It doesn't need to be pulled like a bow. It will instead seek an arrow in your inventory and auto-load it. Loading an arrow takes 1 second. Any arrow can be loaded (normal/ tipped/ spectral/ modded). This crossbow fires a volley of 3-8 arrows. Only one of those arrows can be picked up. Additionally this crossbow spits molten magma every time it is fired.
+embers.research.page.crossbow_raging_volcano_1.title=Crossbow Of The Raging Volcano
+embers.research.page.crossbow_raging_volcano_1.desc=Molten magma is a projectile that only exists for half a second but deals some (2 hearts) damage on contact and sets targets ablaze for 15 seconds.
