finished ingame documentation

--- a/src/main/resources/assets/aetherworks/lang/en_us.lang
+++ b/src/main/resources/assets/aetherworks/lang/en_us.lang
@@ -134,9 +134,18 @@ embers.research.aetherworks=The Aetherium Forge
 embers.research.page.aetherium_ore=Aetherium Ore
 embers.research.page.aetherium_ore.title=Aetherium Ore
 embers.research.page.aetherium_ore.desc=The first thing you will need in order to begin playing with the mod is Aetherium Ore itself. Formed high in the mountains it can be a challenge to find. Thankfully it emits light to help find it. Upon mining it with a diamond pickaxe it will drop Aetherium Shards.
+embers.research.page.aether_collector_category=Collecting Aetherium
 embers.research.page.aether_collector=Aetherium Collector
 embers.research.page.aether_collector.title=Aetherium Collector
-embers.research.page.aether_collector.desc=The Aetherium Collector is a multiblock structure that can be used to collect Aetherium Gas from the atmosphere. It is a very simple structure to build and can be used to collect Aetherium Gas for use in the Aetherium Forge.
+embers.research.page.aether_collector.desc=The Aetherium Collector is a multiblock structure that can be used to collect Aetherium Gas from the atmosphere. Start by placing a Fluid Vessel on the bottom of the structure. Then place two Prism Supports on top of the Fluid Vessel. Finally place an Aetherium Prism on top of the Prism Support. If the whole structure is build correctly if it starts to glow with sky blue runes.
+embers.research.page.aether_collector_1.title=Aetherium Collector
+embers.research.page.aether_collector_1.desc=After that wait for the night time and your collector will start collecting Impure Aetherium for you! The Impure Aetherium then needs to be purified to be processed further.
+embers.research.page.collector_large_pillar=Moonlight Amplifier Pillar
+embers.research.page.collector_large_pillar.title=Moonlight Amplifier Pillar
+embers.research.page.collector_large_pillar.desc=Place two Archaic Bricks and an Archaic Edge with a two block gap to the middle Prism in each cardinal direction. Top them off with a Moonlight Amplifier. The Amplifier needs to face the central Prism.
+embers.research.page.collector_small_pillar=Focusing Matrix Pillar
+embers.research.page.collector_small_pillar.title=Focusing Matrix Pillar
+embers.research.page.collector_small_pillar.desc=Place an Archaic Brick and an Archaic Edge with a one block gap to the middle Prism in each ordinal direction. Top them off with an Aetherium Lens Focusing Matrix.
 embers.research.page.purifying_aetherium=Purifying Aetherium
 embers.research.page.purifying_aetherium.title=Purifying Aetherium
 embers.research.page.purifying_aetherium.desc=In order to get usable Aetherium Gas from the Impure Aetherium you've been collecting you'll need a Mixer Centrifuge. Simply mix Impure Aetherium with some Molten Electrum to get your pure Aetherium which is usable! Aetherium can be immediately used to create more Aetherium Shards via the use of a Stamper.
@@ -146,7 +155,7 @@ embers.research.page.forge.desc=The forge is a multiblock structure that you bui
 embers.research.page.forge_1.title=The Forge
 embers.research.page.forge_1.desc=inserted from the top of the block. You know you've done it correctly as the forge will start glowing with red runes. The forge operates with heat - in order to work it needs to store a specific amount of heat. If too little is stored it won't be usable. If too much is stored the forge will blow up. In order to control the heat you may want to know it's current amount instead of guessing. The Heat Gauge is a block that can be placed on any side of
 embers.research.page.forge_2.title=The Forge
-embers.research.page.forge_2.desc=the Aetherium Forge Core and will read the current heat of the forge. At it's core the forge is used to process aetherium so you need a way of inputting it into the forge. Placing any fluid container by the forge blocks(not the core!) on the same y level will allow the forge to extract aetherium from that container.
+embers.research.page.forge_2.desc=the Aetherium Forge Core and will read the current heat of the forge. At it's core the forge is used to process aetherium so you need a way of inputting it into the forge. Placing any fluid container by the forge blocks (not the core!) on the same y level will allow the forge to extract aetherium from that container.
 embers.research.page.heater=Generating Heater
 embers.research.page.heater.title=Generating Heat
 embers.research.page.heater.desc=As already stated the forge needs heat. The way to build up heat is through the use of Aetherium Forge Heaters. They will convert external (pumped in) water into steam using a heat source underneath (lava) and heat up the forge. They can be attached to any horizontal (north, west, south or east) side of the forge blocks themselves (not the core!). They need a redstone signal to start producing heat and will stop as soon as the signal is removed.
